# MipaVoice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: docker-publish.yml
docker/: .env.example  livekit.yaml
docs/: docker-server-deploy.md  linux-server-deploy.md  windows-client-build.md
scripts/: build-server-linux-glibc217.sh  download-livekit.ps1  start-livekit.ps1
server/: Cargo.toml
server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  api.ts  audioProcessing.ts  livekit.ts  rnnoiseWorklet.js  sfu.ts  styles.css
